--- a/animation.css
+++ b/animation.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+        filter:brightness(80%);
+        filter: brightness(100%);
+        filter:contrast(-50%);
+        filter:grayscale(100%);
+    }
+    
+    100% {
+        transform: translateY(-10px);
+        filter:  blur(0px);    
+    }
+}
+
+
 #moon{
     margin-top: 15px;
     color: var(--text-color);
@@ -185,6 +202,10 @@ button.subnavbtn{
     height: 800px;
     margin-top: -50px;
     margin-bottom: -50px;
+}
+    
+.h-img {
+    animation: bounce 0.5s infinite alternate;
 }
 
 .h p{
@@ -489,10 +510,3 @@ span{
         margin-top: 2rem
     }
 }
-
-
-
-
-
-
-
