--- a/animation.css
+++ b/animation.css
@@ -1,21 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+.h-img {
+    animation: scaleAnimation 1.5s ease-in-out infinite alternate;
+}
 
-@keyframes bounce {
+@keyframes scaleAnimation {
     0% {
-        transform: translateY(0);
+        transform: scale(0.5);
         filter:brightness(80%);
         filter: brightness(100%);
         filter:contrast(-50%);
         filter:grayscale(100%);
     }
-    
     100% {
-        transform: translateY(-10px);
-        filter:  blur(0px);    
+        transform: scale(1);
+        filter:  blur(0px);   
     }
 }
-
 
 #moon{
     margin-top: 15px;
@@ -204,9 +205,6 @@ button.subnavbtn{
     margin-bottom: -50px;
 }
     
-.h-img {
-    animation: bounce 0.5s infinite alternate;
-}
 
 .h p{
     font-size: 1.7rem;
